--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.uri.team21.culinarycommrade">
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
+
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -18,6 +21,9 @@
         <activity android:name=".inventory" />
         <activity android:name=".search" />
         <activity android:name=".shoppinglist"></activity>
+
     </application>
+
+
 
 </manifest>
