Touching a recipe in search now brings up the recipe display page.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".recipe" />
         <activity android:name=".inventory" />
         <activity android:name=".search" />
         <activity android:name=".shoppinglist"></activity>
