--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,6 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
-
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -21,10 +20,7 @@
         <activity android:name=".recipe" />
         <activity android:name=".inventory" />
         <activity android:name=".search" />
-        <activity android:name=".shoppinglist"></activity>
-
+        <activity android:name=".shoppinglist" />
     </application>
-
-
 
 </manifest>
